Use JDK11 utils to remove need for commons-io